<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalActivity"
    android:background="@color/background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/room_no_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room_no"
            android:layout_margin="15dp"
            />

        <EditText
            android:id="@+id/bhawan_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/bhawan"/>

        <EditText
            android:id="@+id/mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Mob_no"
            android:layout_margin="15dp"
            />

        <EditText
            android:id="@+id/complain_text"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/complain"
            android:layout_margin="15dp"
            android:padding="8dp"
            android:gravity="left"
            android:background="@drawable/custom_button"/>




    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submit_Btn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="26sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"/>

</RelativeLayout>