<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/Personal"
                android:layout_marginLeft="8dp"
                android:textSize="26sp"
                android:textAppearance="?android:textAppearanceMedium"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:layout_marginLeft="8dp"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="26sp"
                android:textAppearance="?android:textAppearanceMedium"/>
            </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="26sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:background="@android:color/holo_green_dark"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"/>
</RelativeLayout>
